--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
+    "@mui/x-date-pickers": "^7.11.1",
+    "dayjs": "^1.11.12",
     "html2canvas": "^1.4.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
