--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
+    "usehooks-ts": "^3.1.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
